# ScheduleZero

./: .gitignore  COMPLETE_IMPLEMENTATION.md  DEPLOYMENT_DOCUMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DISCORD_NGINX_QUICKSTART.md  README.md  TESTING_STATUS.md  check_db.py  config.yaml  config.yaml.old  handler_registry.yaml  mkdocs.yml  portal_config.yaml  portal_config_portal2.yaml  pyproject.toml  pyproject.toml.pytest  schedulezero_jobs.db  start_all.ps1  start_all.py  sz_root_checker.py  test_apscheduler.py  test_governor_abc.py  test_governor_signals.py  test_schedule.py  test_scheduler.db  test_zmq_recovery.py
.github/: copilot-instructions.md
.github/scripts/: check_github_features.ps1
archive/: ARCHITECTURE_DECISION.md  CLEANUP_PLAN.md  DEPLOYMENT_GUIDE_duplicate.md  README_old.md  REFACTORING_SUMMARY.md  TEST_SUITE_SUMMARY.md
deployments/ansible/: README.md  nginx-schedulezero-simple.conf  nginx-schedulezero.conf  setup-nginx.sh
discord/: COG_SPROCKET_ARCHITECTURE.md  DISCORD_SUMMARY.md  HOWTO.md  ZMQ_LISTENER_GUIDE.md  discord_zmq_example.py
discord/cogs/: schedulezero_cog.py  zmq_listener_cog.py
discord/config/: schedulezero.yaml  zmq_listener.yaml
docs/: APSCHEDULER_VALUE_ANALYSIS.md  BACKEND_INTEGRATION_PROMPT.md  COMPONENT_SPECS.md  CORS_CONFIGURATION.md  DOCUMENTATION_GUIDE.md  EXECUTION_LOGGING_API.md  FRONTEND_COMPONENT_PROMPT.md  GOVERNOR_STRATEGIC_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LOGGING_PROMPT.py  MKDOCS_INTEGRATION.md  MKDOCS_INTEGRATION_OPTIONS.md  MULTI_PORTAL_ARCHITECTURE.md  PORTAL_CONFIGURATION.md  PORT_ZERO_BINDING.md  README.md  SECURITY_AND_NETWORKING.md  VITE_BUILD_TASK.md  architecture.md  autonomous-handler-architecture.md  build-pipeline.md  component-patterns.md  documentation-strategy.md  dynamic-composition.md  frontend-architecture.md  handler-docs-example.md  index.md  microsite-templates.md  microsite-toolkit.md  platform-vision.md  zmq-event-broker-design.md
docs/deployment/: nginx-proxy-setup.md  single-tenant.md  waf-setup.md
docs/testing/: APSCHEDULER_4.0.0a6_UPGRADE_STATUS.md  CLEANUP_CHECKLIST.md  PORT_AND_CONFIGURATION_ANALYSIS.md  TEST_PLAN.md  UPGRADE_SUMMARY.md
docs_site/: index.md  tags.md
examples/: DISCORD_INTEGRATION_COMPARISON.md  README.md  discord_bot_example.py  discord_bot_threaded_example.py  discord_bot_with_cogs.py  discord_handler.py  discord_handler_threaded.py  discord_jobs.yaml
planning/: apscheduler-fork-setup.md  apscheduler-testbed.md  conductor-zero-comparison.md  documentation-reorganization.md  index.md  infrastructure-improvements.md  roadmap.md  v0.3.0-schedule-time-validation.md  zmq-event-broker-for-apscheduler.py
scripts/: build_docs.py  list_md_files.py  run_tests.py  server.py  start-server.ps1  start-server.sh  stop-server.ps1  stop-server.sh  sync-islands.ps1  sync-islands.py
specs/: conductor-zero-architecture.md  distributed-architecture.md  frontend-architecture.md  governor-architecture.md  governor-decision-guide.md  index.md  islands-architecture.md  test-suite-design.md  zmq-socket-fixes.md
templates/: index.html
tests/: DING_ALING_README.md  DING_DONG_README.md  check_aling_status.py  check_ding_dongs.py  check_test_db.py  conftest.py  debug_api.py  debug_broker_election.py  ding_aling_handler.py  ding_dong_handler.py  hack_remove_bongs.py  index.md  run_tests.ps1  schedule_aling_tests.py  schedule_chimes_with_announcements.py  schedule_ding_dongs.py  switch_to_15min_chimes.py  test_20s_beep.py  test_autonomous_handler.py  test_component_manager.py  test_date_trigger_formats.py  test_ding_dong_brief.py  test_ding_dong_pytest.py  test_execution_logging.py  test_governor.py  test_handler.py  test_handler.py.zerorpc_backup  test_integration.py  test_local_handler_registry.py  test_long_running.py  test_port_zero_binding.py  test_scheduled_jobs.py  test_scheduler_with_sounds.py  test_simple.py  test_simple_schedule_execution.py  test_zmq_event_broker.py  test_zmq_socket_recovery.py
(+90 files in other folders)
