[project]
name = "schedule-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tornado (>=6.5.2,<7.0.0)", "sqlalchemy (>=2.0.44,<3.0.0)", "pyzmq (>=27.1.0,<28.0.0)", "pyyaml (>=6.0.3,<7.0.0)", "python-dateutil (>=2.9.0.post0,<3.0.0)", "apscheduler (==4.0.0a5)"]

[tool.poetry]
packages = [{include = "schedule_zero", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
