[project]
name = "schedule-zero"
version = "0.2.0"
description = ""
authors = [
    {name = "esotericbtye",email = "esotericbyte@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "apscheduler (>=4.0.0a6)",
    "tornado (>=6.5.4,<7.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pyzmq (>=27.1.0,<28.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "sniffio (>=1.3.1,<2.0.0)"
]


[tool.poetry]
packages = [{include = "schedule_zero", from = "src"}]

[tool.poetry.scripts]
schedulezero = "schedule_zero.cli_governor:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "psutil (>=7.2.2,<8.0.0)"
]

[tool.pytest.ini_options]
# Pytest configuration for ScheduleZero test suite
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Asyncio mode for pytest-asyncio
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Markers for organizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "regression: marks tests as regression tests",
    "zmq: marks tests that require ZMQ",
    "governor: marks tests for governor functionality",
]

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"
